# DeMorph

./: .gitignore  README.md
client/: .gitignore  .prettierrc  index.html  package-lock.json  package.json
client/src/: index.css  main.tsx
client/src/components/: Navbar.tsx  Page.tsx  Section.tsx
client/src/components/ui/: Button.tsx  FileInput.tsx  Input.tsx
client/src/context/: AuthContext.tsx
client/src/pages/: Error.tsx  Home.tsx  SignIn.tsx  SignUp.tsx
client/src/sections/Home/: Hero.tsx
client/src/types/: constants.ts  forms.ts
client/src/utils/: appConfig.tsx  helpers.ts  textConstants.ts
server/: pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: d2983be2a0e6_add_user_model.py
server/app/: routes.py
server/app/services/: detection.py
server/app/utils/: video_processing.py
server/src/: server.py
server/src/auth/: router.py  schemas.py  services.py  utils.py
server/src/core/: config.py  database.py  dependencies.py  exceptions.py  lifespan.py  metadata.py
server/src/user/: models.py  router.py  schemas.py  services.py
